# ctr4ever

./: .gitignore  README.md  dev.docker-compose.yml  pyproject.toml  requirements.txt
ctr4ever/: __init__.py  config.dev.py  config.py  container.py  jwt.py
ctr4ever/cli/: faker.py  installer.py  md.py  setup.py
ctr4ever/helpers/: filesystem.py  pagination.py
ctr4ever/models/: category.py  character.py  country.py  enginestyle.py  gameversion.py  model.py  modelbase.py  platform.py  player.py  ruleset.py  standard.py  standardset.py  standardtime.py  submission.py  submissionhistory.py  track.py
ctr4ever/rest/: api.py  requestdispatcher.py  response.py  routeresolver.py  routes.py
ctr4ever/services/: authenticator.py  container.py  faker.py  fakerservice.py  masterdata.py  passwordmanager.py  standardcalculator.py  submissionmanager.py  timeformatter.py  timeparser.py
ctr4ever/tests/: mockendpoint.py  mockmodel.py  mockmodelrepository.py  mockpasswordencoderstrategy.py
ctr4ever/web/: web.py
doc/: deploy.md  dev.md
install/: countries.json  engine_styles.json  game_versions.json  platforms.json  rulesets.json  tracks.json
migrations/versions/: 03c81e3842ac_initial_migration.py  41c42e38c1cb_initial_migration.py  551ca74fbc85_initial_migration.py  6734f6b8be30_initial_migration.py  95d1d69cadfa_initial_migration.py  f5364d423994_initial_migration.py  (+1 more)
setup/: categories.json  characters.json  countries.json  game_versions.json  standards.json
testing/: install_all.sh  run_backend_tests.sh
web/: package-lock.json  package.json
webapp/: index.html
(+157 files in other folders)
